Match hosted result details to local output

--- a/ui/index.html
+++ b/ui/index.html
@@ -71,16 +71,18 @@
     .result-explainer h3 { margin:0 0 12px; font-size:20px; color:var(--bright); }
     .result-explainer p { margin:0 0 14px; color:var(--muted); line-height:1.6; }
     .result-explainer ul { margin:0; padding-left:22px; color:var(--muted); line-height:1.6; list-style:disc; }
-    .result-grid { margin-top:28px; display:grid; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); gap:22px; }
+    .result-advanced { margin-top:28px; }
+    .result-advanced .advanced-grid { margin-top:18px; display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:18px; color:var(--muted); }
     .metric-label { font-size:12px; text-transform:uppercase; letter-spacing:1px; color:var(--muted); margin-bottom:6px; }
-    .metric-value { font-size:18px; font-weight:500; }
+    .metric-value { font-size:18px; font-weight:500; color:var(--fg); }
     .metric-note { font-size:12px; color:var(--muted); margin-top:4px; }
-    .result-card details { margin-top:18px; }
-    .result-card pre { background:#050705; border-radius:12px; padding:16px; overflow:auto; font-size:13px; color:#a0cba0; }
+    .result-advanced .note { margin-top:18px; color:var(--muted); font-size:13px; }
     .result-actions { margin-top:32px; display:flex; flex-wrap:wrap; gap:16px; }
     .btn { display:inline-flex; align-items:center; justify-content:center; padding:14px 22px; border-radius:14px; font-weight:600; border:0; cursor:pointer; transition:transform 0.2s ease, box-shadow 0.2s ease; }
     .btn-primary { background:var(--bright); color:#041105; box-shadow:0 16px 32px rgba(0,255,65,0.18); }
     .btn-primary:hover { transform:translateY(-2px); box-shadow:0 20px 36px rgba(0,255,65,0.28); }
+    .btn-secondary { background:rgba(255,255,255,0.08); color:var(--fg); border:1px solid rgba(0,255,65,0.2); }
+    .btn-secondary:hover { transform:translateY(-2px); border-color:rgba(0,255,65,0.4); }
     body.results-mode footer { margin-top:40px; }
     .loading-overlay { position:fixed; inset:0; display:flex; align-items:center; justify-content:center; background:rgba(6,8,7,0.9); backdrop-filter:blur(12px); z-index:1000; padding:24px; }
     .loading-content { text-align:center; max-width:520px; color:var(--muted); }
@@ -248,27 +250,28 @@
         <p id="result-interpretation-detail"></p>
         <ul id="result-reasons" class="hidden"></ul>
       </div>
-      <div class="result-grid">
-        <div>
-          <div class="metric-label">CI 95%</div>
-          <div class="metric-value" id="result-ci">--</div>
+      <details class="result-advanced">
+        <summary>Advanced details</summary>
+        <div class="advanced-grid">
+          <div>
+            <div class="metric-label">Confidence width</div>
+            <div class="metric-value" id="result-ci">--</div>
+          </div>
+          <div>
+            <div class="metric-label">Template stability</div>
+            <div class="metric-value" id="result-stability">--</div>
+            <div class="metric-note" id="result-stability-band"></div>
+          </div>
+          <div>
+            <div class="metric-label">Policy compliance</div>
+            <div class="metric-value" id="result-compliance">--</div>
+          </div>
         </div>
-        <div>
-          <div class="metric-label">Stability</div>
-          <div class="metric-value" id="result-stability">--</div>
-          <div class="metric-note" id="result-stability-band"></div>
-        </div>
-        <div>
-          <div class="metric-label">Run ID</div>
-          <div class="metric-value" id="result-runid">--</div>
-        </div>
-      </div>
-      <details>
-        <summary>Raw aggregates</summary>
-        <pre id="result-json"></pre>
+        <p class="note">Narrower confidence widths mean the model gave consistent answers. Stability reflects how similar the paraphrased prompts were. Compliance shows how often responses followed the Raw Prior rules.</p>
       </details>
       <div class="result-actions">
         <button type="button" class="btn btn-primary" id="result-new">Ask another claim</button>
+        <button type="button" class="btn btn-secondary" id="result-copy">Copy summary</button>
       </div>
     </section>
 
@@ -424,8 +427,7 @@
       var resultCi = document.getElementById('result-ci');
       var resultStability = document.getElementById('result-stability');
       var resultBand = document.getElementById('result-stability-band');
-      var resultRunId = document.getElementById('result-runid');
-      var resultJson = document.getElementById('result-json');
+      var resultCompliance = document.getElementById('result-compliance');
       var resultExplainer = document.getElementById('result-explainer');
       var resultVerdict = document.getElementById('result-verdict');
       var resultInterpretationMain = document.getElementById('result-interpretation-main');
@@ -434,6 +436,7 @@
       var loadingOverlay = document.getElementById('loading-overlay');
       var loadingClaim = document.getElementById('loading-claim');
       var resultNewButton = document.getElementById('result-new');
+      var resultCopyButton = document.getElementById('result-copy');
 
       var signInModal = document.getElementById('signin-modal');
       var signInForm = document.getElementById('signin-form');
@@ -525,17 +528,26 @@
           var pillText = (data.model || 'GPT‑5') + ' · Internal knowledge only';
           resultPill.textContent = pillText;
         }
-        if (Array.isArray(data.aggregates.ci95)) {
-          var lo = formatPercent(data.aggregates.ci95[0]);
-          var hi = formatPercent(data.aggregates.ci95[1]);
-          resultCi.textContent = lo + ' – ' + hi;
-        } else {
-          resultCi.textContent = '--';
+        if (resultCi) {
+          if (typeof data.aggregates.ci_width === 'number') {
+            resultCi.textContent = data.aggregates.ci_width.toFixed(3);
+          } else {
+            resultCi.textContent = '--';
+          }
         }
-        resultStability.textContent = data.aggregates.stability_score !== undefined ? data.aggregates.stability_score.toFixed(2) : '--';
-        resultBand.textContent = data.aggregates.stability_band ? ('Band: ' + data.aggregates.stability_band) : '';
-        resultRunId.textContent = data.run_id || '--';
-        resultJson.textContent = JSON.stringify(data.aggregates, null, 2);
+        if (resultStability) {
+          resultStability.textContent = data.aggregates.stability_score !== undefined ? data.aggregates.stability_score.toFixed(2) : '--';
+        }
+        if (resultBand) {
+          resultBand.textContent = data.aggregates.stability_band ? ('Band: ' + data.aggregates.stability_band) : '';
+        }
+        if (resultCompliance) {
+          if (typeof data.aggregates.rpl_compliance_rate === 'number') {
+            resultCompliance.textContent = Math.round(data.aggregates.rpl_compliance_rate * 100) + '%';
+          } else {
+            resultCompliance.textContent = '--';
+          }
+        }
 
         var verdictInfo = buildVerdict(probValue);
         var verdictLabel = data.verdict_label || verdictInfo.title;
@@ -550,6 +562,9 @@
           resultInterpretationMain.textContent = interpretation;
         }
 
+        var apiReasons = Array.isArray(data.explanation_reasons) ? data.explanation_reasons.filter(Boolean) : [];
+        var reasonList = apiReasons.length ? apiReasons : buildReasons(probValue);
+
         if (resultExplainer && resultVerdict) {
           resultVerdict.textContent = headline;
           if (resultInterpretationDetail) {
@@ -557,8 +572,6 @@
           }
 
           if (resultReasons) {
-            var apiReasons = Array.isArray(data.explanation_reasons) ? data.explanation_reasons.filter(Boolean) : [];
-            var reasonList = apiReasons.length ? apiReasons : buildReasons(probValue);
             resultReasons.innerHTML = '';
             if (reasonList.length) {
               reasonList.forEach(function(line){
@@ -572,6 +585,18 @@
             }
           }
           resultExplainer.classList.remove('hidden');
+        }
+
+        if (resultCopyButton) {
+          var summaryText = buildSummary({
+            claim: data.claim,
+            verdict: verdictLabel,
+            percent: percentText,
+            reasons: Array.isArray(data.explanation_reasons) && data.explanation_reasons.length ? data.explanation_reasons.filter(Boolean) : buildReasons(probValue),
+            modelText: resultPill ? resultPill.textContent : (data.model || 'GPT‑5'),
+          });
+          resultCopyButton.dataset.summary = summaryText;
+          resultCopyButton.textContent = 'Copy summary';
         }
 
         resultCard.classList.remove('hidden');
@@ -780,9 +805,6 @@
           resultReasons.innerHTML = '';
           resultReasons.classList.add('hidden');
         }
-        if (resultJson) {
-          resultJson.textContent = '';
-        }
         if (resultPercentage) {
           resultPercentage.textContent = '--%';
         }
@@ -801,6 +823,22 @@
         if (resultInterpretationDetail) {
           resultInterpretationDetail.textContent = '';
         }
+        if (resultCi) {
+          resultCi.textContent = '--';
+        }
+        if (resultStability) {
+          resultStability.textContent = '--';
+        }
+        if (resultBand) {
+          resultBand.textContent = '';
+        }
+        if (resultCompliance) {
+          resultCompliance.textContent = '--';
+        }
+        if (resultCopyButton) {
+          resultCopyButton.textContent = 'Copy summary';
+          resultCopyButton.dataset.summary = '';
+        }
         window.scrollTo({ top: 0, behavior: 'smooth' });
       }
 
@@ -810,6 +848,21 @@
           if (claimInput) {
             claimInput.focus();
             claimInput.select();
+          }
+        });
+      }
+
+      if (resultCopyButton) {
+        resultCopyButton.addEventListener('click', function(){
+          var summary = resultCopyButton.dataset.summary || '';
+          if (!summary) return;
+          if (navigator.clipboard && navigator.clipboard.writeText) {
+            navigator.clipboard.writeText(summary).then(function(){
+              resultCopyButton.textContent = 'Summary copied!';
+              setTimeout(function(){ resultCopyButton.textContent = 'Copy summary'; }, 2000);
+            }).catch(function(){ fallbackCopy(summary); });
+          } else {
+            fallbackCopy(summary);
           }
         });
       }
@@ -947,6 +1000,43 @@
         'It depends on definitions or missing context.',
         'Supporting and opposing examples appear in roughly equal measure.'
       ];
+    }
+
+    function buildSummary(data) {
+      var parts = [];
+      if (data.claim) {
+        parts.push('Claim: "' + data.claim + '"');
+      }
+      if (data.verdict && data.percent) {
+        parts.push('Verdict: ' + data.verdict + ' (' + data.percent + ')');
+      }
+      var reasons = Array.isArray(data.reasons) ? data.reasons.filter(Boolean) : [];
+      if (reasons.length) {
+        parts.push('Reasons:');
+        reasons.forEach(function(r){ parts.push('- ' + r); });
+      }
+      if (data.modelText) {
+        parts.push('Model: ' + data.modelText);
+      }
+      return parts.join('\n');
+    }
+
+    function fallbackCopy(text) {
+      var textarea = document.createElement('textarea');
+      textarea.value = text;
+      textarea.setAttribute('readonly', '');
+      textarea.style.position = 'absolute';
+      textarea.style.left = '-9999px';
+      document.body.appendChild(textarea);
+      textarea.select();
+      try {
+        document.execCommand('copy');
+      } catch (err) {}
+      document.body.removeChild(textarea);
+      if (resultCopyButton) {
+        resultCopyButton.textContent = 'Summary copied!';
+        setTimeout(function(){ resultCopyButton.textContent = 'Copy summary'; }, 2000);
+      }
     }
   </script>
 </body>
