Send portal cancel page to homepage

--- a/ui/billing/cancel.html
+++ b/ui/billing/cancel.html
@@ -21,7 +21,7 @@
     <h1>Checkout Cancelled</h1>
     <p>You closed Stripe Checkout before finishing. Your existing plan is unchanged.</p>
     <p>If you still want to upgrade, reopen the plan chooser and continue from there.</p>
-    <a class="button" href="/?plans=1">Back to plans</a>
+    <a class="button" href="/">Back to Heretix</a>
   </main>
 </body>
 </html>
