--- a/ui/index.html
+++ b/ui/index.html
@@ -342,6 +342,7 @@
   <footer>
     <span>© <span id="year"></span> Heretix</span>
     <a href="mailto:hello@heretix.ai">Contact</a>
+    <a href="/privacy/">Privacy Policy</a>
   </footer>
 
   <div class="modal" id="signin-modal" aria-hidden="true" role="dialog" aria-modal="true">
