Add terms of service page and footer link

--- a/ui/index.html
+++ b/ui/index.html
@@ -343,6 +343,7 @@
     <span>© <span id="year"></span> Heretix</span>
     <a href="mailto:hello@heretix.ai">Contact</a>
     <a href="/privacy/">Privacy Policy</a>
+    <a href="/terms/">Terms of Service</a>
   </footer>
 
   <div class="modal" id="signin-modal" aria-hidden="true" role="dialog" aria-modal="true">
