Clear claim input after finishing a check

--- a/ui/index.html
+++ b/ui/index.html
@@ -936,8 +936,8 @@
         resultNewButton.addEventListener('click', function(){
           resetResultsView();
           if (claimInput) {
+            claimInput.value = '';
             claimInput.focus();
-            claimInput.select();
           }
         });
       }
