--- a/ui/index.html
+++ b/ui/index.html
@@ -885,6 +885,9 @@
 
       function resetResultsView() {
         document.body.classList.remove('results-mode');
+        if (claimInput) {
+          claimInput.value = '';
+        }
         if (resultCard) {
           resultCard.classList.add('hidden');
         }
