--- a/ui/results.html
+++ b/ui/results.html
@@ -63,7 +63,7 @@
     <section class="hero">
       <div>
         <div class="pill">{UI_MODEL} · {UI_MODE}</div>
-        <div class="percent">{PERCENT}%</div>
+        <div class="percent">{PERCENT}</div>
         <div class="verdict">{VERDICT}</div>
       </div>
       <div>
