Tighten UI copy for web mode label

--- a/ui/index.html
+++ b/ui/index.html
@@ -224,7 +224,7 @@
             </select>
             <select name="ui_mode" aria-label="Mode selection">
               <option value="prior" selected>Internal knowledge only</option>
-              <option value="internet-search">Internet search (Web-Informed)</option>
+              <option value="internet-search">Internet search</option>
               <option value="user-data" disabled>User evidence · coming soon</option>
             </select>
           </div>
