--- a/ui/index.html
+++ b/ui/index.html
@@ -615,7 +615,76 @@
         }
 
         var apiReasons = Array.isArray(data.explanation_reasons) ? data.explanation_reasons.filter(Boolean) : [];
-        var reasonList = apiReasons.length ? apiReasons : buildReasons(probValue);
+        var reasonList;
+        var welReplicates = Array.isArray(data.wel_replicates) ? data.wel_replicates : [];
+        var webBlock = data.web && typeof data.web === 'object' ? data.web : null;
+        var weightsBlock = data.weights && typeof data.weights === 'object' ? data.weights : {};
+        if (apiReasons.length) {
+          reasonList = apiReasons;
+        } else {
+          var collected = [];
+          var seenReason = new Set();
+          function appendItems(items) {
+            if (!items) return false;
+            for (var i = 0; i < items.length; i++) {
+              var raw = items[i];
+              if (typeof raw !== 'string') continue;
+              var text = raw.trim();
+              if (!text) continue;
+              if (!/[.!?]$/.test(text)) text += '.';
+              if (!seenReason.has(text)) {
+                seenReason.add(text);
+                collected.push(text);
+              }
+              if (collected.length >= 4) return true;
+            }
+            return false;
+          }
+          if (isWebMode && welReplicates.length) {
+            for (var r = 0; r < welReplicates.length; r++) {
+              var rep = welReplicates[r] || {};
+              if (appendItems(rep.support_bullets)) break;
+            }
+            if (collected.length < 2) {
+              for (var r2 = 0; r2 < welReplicates.length; r2++) {
+                var rep2 = welReplicates[r2] || {};
+                if (appendItems(rep2.oppose_bullets)) break;
+              }
+            }
+            if (collected.length < 2) {
+              for (var r3 = 0; r3 < welReplicates.length; r3++) {
+                var rep3 = welReplicates[r3] || {};
+                if (appendItems(rep3.notes)) break;
+              }
+            }
+          }
+          if (collected.length === 0 && isWebMode && webBlock) {
+            var metrics = webBlock.evidence && typeof webBlock.evidence === 'object' ? webBlock.evidence : {};
+            var nDocs = Number(metrics.n_docs || 0);
+            var nDomains = Number(metrics.n_domains || 0);
+            var priorText = priorProb !== null ? formatPercent(priorProb) : null;
+            var shiftLine = priorText
+              ? 'Web evidence across ' + nDocs + ' document' + (nDocs === 1 ? '' : 's') +
+                ' from ' + nDomains + ' domain' + (nDomains === 1 ? '' : 's') +
+                ' moved GPT‑5’s prior from ' + priorText + ' to ' + percentText + '.'
+              : null;
+            if (shiftLine) collected.push(shiftLine);
+            var medianAge = metrics.median_age_days;
+            if (typeof medianAge === 'number' && medianAge === medianAge) {
+              collected.push('Median publish date was about ' + Math.round(medianAge) +
+                ' day' + (Math.round(medianAge) === 1 ? '' : 's') +
+                ' ago, so fresher coverage could tighten the estimate.'
+              );
+            }
+            var weightVal = typeof weightsBlock.w_web === 'number' ? weightsBlock.w_web : null;
+            if (weightVal !== null) {
+              collected.push('Web weighting was ' + weightVal.toFixed(2) +
+                ', combining web evidence with GPT‑5’s prior to produce the final probability.'
+              );
+            }
+          }
+          reasonList = collected.length ? collected : buildReasons(probValue);
+        }
 
         if (resultExplainer && resultVerdict) {
           resultVerdict.textContent = headline;
@@ -644,7 +713,7 @@
             claim: data.claim,
             verdict: verdictLabel,
             percent: percentText,
-            reasons: Array.isArray(data.explanation_reasons) && data.explanation_reasons.length ? data.explanation_reasons.filter(Boolean) : buildReasons(probValue),
+            reasons: reasonList,
             modelText: resultPill ? resultPill.textContent : (data.model || 'GPT‑5'),
           });
           resultCopyButton.dataset.summary = summaryText;
